--- a/src/app/resources/Report.css
+++ b/src/app/resources/Report.css
@@ -29,6 +29,9 @@
     padding: 15px 0 15px 55px;
     color: #fff;
 }
+.report [data-dojo-attach-point='reportContainer']>a {
+    color: #fff;
+}
 .report h4 {
     padding: 5px 15px;
     margin: 0;
