--- a/src/app/tests/ReportTemplateTest.html
+++ b/src/app/tests/ReportTemplateTest.html
@@ -30,6 +30,9 @@
             'dojo/text!app/tests/data/report.json',
 
             'handlebars',
+            
+            'jquery',
+            'bootstrap',
 
             'dojo/domReady!'
         ], function(templateTxt, reportTxt, handlebars) {
