--- a/src/app/templates/ReportTemplate.html
+++ b/src/app/templates/ReportTemplate.html
@@ -79,7 +79,7 @@
             {{/each}}
         </tbody>
     </table>
-    <h4 class="utilities">Electric Utility</h4>
+    <h4 class="utilities">Electric Utility Territory</h4>
     <table class='table'>
         <thead>
             <tr>
